--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,15 @@
 pipeline {
     agent none
 
+    tools {
+        maven 'maven-3'
+        jdk 'java-17'
+    }
+
     environment {
-        QA_SERVER   = "ubuntu@172.31.77.87"
+       QA_SERVER   = "ubuntu@172.31.77.87"
         PROD_SERVER = "ubuntu@172.31.71.63"
+
     }
 
     triggers {
@@ -55,7 +61,7 @@ pipeline {
         }
 
         stage('Deploy to Prod') {
-            agent { label 'jenkins-agent' }
+            agent { label 'myslave' }
             steps {
                 deployTomcat(PROD_SERVER, "target/*.war")
             }
