--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,11 +38,12 @@ pipeline {
             parallel {
 
                 stage('Deploy to QA') {
-                    agent { label 'myslave' }
+                    agent { label 'jenkins-agent' }
                     steps {
-                        deployTomcat(QA_SERVER, "target/*.war")
-                    }
-                }
+                        deployTomcat("ubuntu@172.31.77.87", "testapp.war")
+    }
+}
+
 
                 stage('Run Selenium Tests') {
                     agent { label 'myslave' }
