--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,9 @@ pipeline {
                 stage('Deploy to QA') {
                     agent { label 'myslave' }
                     steps {
-                        deployTomcat(QA_SERVER, "target/*.war")
+                        deployTomcat("sharedlibrary1","172.31.77.87","testapp")
+                }
+
                     }
                 }
 
