--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
                 stage('Deploy to QA') {
                     agent { label 'myslave' }
                     steps {
-                        deployTomcat("sharedlibrary1","172.31.77.87","testapp")
+                        deployTomcat("project","172.31.77.87","testapp")
                 }
 
                     }
