--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,9 +34,7 @@ pipeline {
                 stage('Deploy to QA') {
                     agent { label 'myslave' }
                     steps {
-                        cicd.deployTomcat("project","172.31.77.87","testapp")
-                }
-
+                        deployTomcat(QA_SERVER, "target/*.war")
                     }
                 }
 
@@ -73,3 +71,4 @@ pipeline {
         }
     }
 }
+
