--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,8 @@ pipeline {
                 stage('Deploy to QA') {
                     agent { label 'myslave' }
                     steps {
-                        deployTomcat(QA_SERVER, "target/*.war")
+                        deployTomcat(QA_SERVER, "webapp/target/*.war")
+
                     }
                 }
 
@@ -57,7 +58,8 @@ pipeline {
         stage('Deploy to Prod') {
             agent { label 'jenkins-agent' }
             steps {
-                deployTomcat(PROD_SERVER, "target/*.war")
+               deployTomcat(PROD_SERVER, "webapp/target/*.war")
+
             }
         }
     }
